# FCGame

./: CMakeLists.txt  build_debug.bat  build_release.bat  clean.bat  conanProfileDebug  conanfile.txt  generate_project_files.bat
.github/workflows/: linux-build.yml  windows-build.yml
Automation/: automation.py  build.bat
Automation/CMAKE/: CMakeHelpers.cmake
Source/ChuckNorrisJokes/: CMakeLists.txt  main.cpp
Source/DoodleJumpGame/: CMakeLists.txt  DoodleJump.cpp  DoodleJump.h  PlatformManager.cpp  PlatformManager.h  Player.cpp  Player.h  Types.h  main.cpp  pch.h
Source/DoodleJumpGame/Tests/: main.cpp
Source/FightClubGame/: CMakeLists.txt  FightClub.cpp
Source/FightClubGame/Game/: Character.h  Weapon.cpp  Weapon.h
Source/Game/: Character.cpp  Character.h
Source/RaylibTetris/: CMakeLists.txt
Source/Tests/: main.cpp
Source/Utils/: CMakeLists.txt  Math.cpp  Math.h
conanProfiles/: LinuxDebug  LinuxRelease
